# Deroute

./: .gitignore  CMakeLists.txt  README.md  build_dataset.sh  client.mjs  license  manifest.json  package-lock.json  package.json  peer-controller.mjs  peer.mjs  query.sh  queue.mjs  server.mjs
Extension/: background.js  manifest.json  package-lock.json  swarm.js
Extension/popup/: popup.html  popup.js
Holepunch/: .gitignore  package-lock.json  package.json
Holepunch/src/: peer-controller.mjs  peer.mjs
Native/: controller.bat  controller.js  extension.js  hostMsgReceive.bat  hostMsgReceive.js  log.txt  manifest.json  package-lock.json  package.json  parrot.bat  parrot.js  register.bat
Native/Holepunch/: controller.mjs  example.mjs  package-lock.json  package.json  test.js
Native/Holepunch/src/: peer-controller.mjs  peer.mjs  queue.mjs
Native/search/: CMakeLists.txt  build.py  controller.py  embed.cpp  local_hash.cpp  parse_website.py
Native/search/src/: compress.cpp  compress.h  controller.py  deroute.cpp  deroute.h  dictionary.cpp  dictionary.h  embed.cpp  embed.h  local_hash.cpp  parse_website.py  search.cpp  search.h  utils.cpp  utils.h  vector.cpp  vector.h
Native/search/tests/: build_dataset.py  parse_website.py  query.py  urls.txt
data/: urls.txt
fastText/: README.md  fasttext.js  fasttext_wasm.js  test.html
popup/: popup.html  popup.js  popup_sandbox.html
search/: controller.py  embed.cpp  parse_website.py  search.cpp  vec_tools.cpp  vec_tools.h
src/: embed.cpp  local_hash.cpp  package-lock.json  parse_website.py  peer-controller.mjs  peer.mjs  search.cpp  vec_tools.cpp  vec_tools.h
tests/: build_dataset.py  build_dataset.sh  query.js  query.py  query.sh  query_plain.txt  urls.txt
